--- a/visual/vs2012/seed/seed.vcxproj.filters
+++ b/visual/vs2012/seed/seed.vcxproj.filters
@@ -46,7 +46,6 @@
     <ClCompile Include="..\..\..\source\EventInputKeyboard.cpp" />
     <ClCompile Include="..\..\..\source\EventInputMotion.cpp" />
     <ClCompile Include="..\..\..\source\EventInputPointer.cpp" />
-    <ClCompile Include="..\..\..\source\EventJob.cpp" />
     <ClCompile Include="..\..\..\source\EventMovie.cpp" />
     <ClCompile Include="..\..\..\source\EventPresentation.cpp" />
     <ClCompile Include="..\..\..\source\EventResourceLoader.cpp" />
@@ -60,7 +59,6 @@
     <ClCompile Include="..\..\..\source\Key.cpp" />
     <ClCompile Include="..\..\..\source\Keyframe.cpp" />
     <ClCompile Include="..\..\..\source\LeakReport.cpp" />
-    <ClCompile Include="..\..\..\source\ModuleManager.cpp" />
     <ClCompile Include="..\..\..\source\Movie.cpp" />
     <ClCompile Include="..\..\..\source\Particle.cpp" />
     <ClCompile Include="..\..\..\source\ParticleEmitter.cpp" />
@@ -88,52 +86,7 @@
     <ClCompile Include="..\..\..\source\interface\ICartridge.cpp">
       <Filter>interface</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\source\interface\IDataObject.cpp">
-      <Filter>interface</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\source\interface\IEvent.cpp">
-      <Filter>interface</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\source\interface\IEventFileSystemListener.cpp">
-      <Filter>interface</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\source\interface\IEventInput.cpp">
-      <Filter>interface</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\source\interface\IEventInputJoystickListener.cpp">
-      <Filter>interface</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\source\interface\IEventInputKeyboardListener.cpp">
-      <Filter>interface</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\source\interface\IEventInputMotionListener.cpp">
-      <Filter>interface</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\source\interface\IEventInputPointerListener.cpp">
-      <Filter>interface</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\source\interface\IEventJobListener.cpp">
-      <Filter>interface</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\source\interface\IEventListener.cpp">
-      <Filter>interface</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\source\interface\IEventMovieListener.cpp">
-      <Filter>interface</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\source\interface\IEventPresentationListener.cpp">
-      <Filter>interface</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\source\interface\IEventResourceLoaderListener.cpp">
-      <Filter>interface</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\source\interface\IEventSystemListener.cpp">
-      <Filter>interface</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\source\interface\IGameApp.cpp">
-      <Filter>interface</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\source\interface\IInput.cpp">
       <Filter>interface</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\source\interface\IInputJoystick.cpp">
@@ -148,16 +101,7 @@
     <ClCompile Include="..\..\..\source\interface\IInputPointer.cpp">
       <Filter>interface</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\source\interface\IModule.cpp">
-      <Filter>interface</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\source\interface\IMusic.cpp">
-      <Filter>interface</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\source\interface\IMutex.cpp">
-      <Filter>interface</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\source\interface\IObject.cpp">
       <Filter>interface</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\source\interface\IReader.cpp">
@@ -178,9 +122,6 @@
     <ClCompile Include="..\..\..\source\interface\IScreen.cpp">
       <Filter>interface</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\source\interface\ISound.cpp">
-      <Filter>interface</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\source\interface\ISoundSource.cpp">
       <Filter>interface</Filter>
     </ClCompile>
@@ -199,12 +140,6 @@
     <ClCompile Include="..\..\..\source\interface\ITransformable.cpp">
       <Filter>interface</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\source\interface\IUpdatable.cpp">
-      <Filter>interface</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\source\interface\IVideo.cpp">
-      <Filter>interface</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\source\interface\IWriter.cpp">
       <Filter>interface</Filter>
     </ClCompile>
@@ -212,9 +147,6 @@
       <Filter>map</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\source\map\IMapLayer.cpp">
-      <Filter>map</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\source\map\IMetadataObject.cpp">
       <Filter>map</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\source\map\MapLayerMetadata.cpp">
@@ -289,8 +221,258 @@
     <ClCompile Include="..\..\..\source\api\rocket\RocketInterface.cpp">
       <Filter>api\rocket</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\source\interface\IManager.cpp">
+      <Filter>interface</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\source\map\MetadataObject.cpp">
+      <Filter>map</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\source\Manager.cpp" />
+    <ClCompile Include="..\..\..\source\Memory.cpp" />
+    <ClCompile Include="..\..\..\source\PrefabManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\include\Container.h" />
+    <ClInclude Include="..\..\..\include\Animation.h" />
+    <ClInclude Include="..\..\..\include\Camera.h" />
+    <ClInclude Include="..\..\..\include\Cartridge.h" />
+    <ClInclude Include="..\..\..\include\Checksum.h" />
+    <ClInclude Include="..\..\..\include\Config.h" />
+    <ClInclude Include="..\..\..\include\Configuration.h" />
+    <ClInclude Include="..\..\..\include\Defines.h" />
+    <ClInclude Include="..\..\..\include\Enum.h" />
+    <ClInclude Include="..\..\..\include\EventFileSystem.h" />
+    <ClInclude Include="..\..\..\include\EventInputJoystick.h" />
+    <ClInclude Include="..\..\..\include\EventInputKeyboard.h" />
+    <ClInclude Include="..\..\..\include\EventInputMotion.h" />
+    <ClInclude Include="..\..\..\include\EventInputPointer.h" />
+    <ClInclude Include="..\..\..\include\EventMovie.h" />
+    <ClInclude Include="..\..\..\include\EventPresentation.h" />
+    <ClInclude Include="..\..\..\include\EventResourceLoader.h" />
+    <ClInclude Include="..\..\..\include\EventSystem.h" />
+    <ClInclude Include="..\..\..\include\File.h" />
+    <ClInclude Include="..\..\..\include\FileSystem.h" />
+    <ClInclude Include="..\..\..\include\Frame.h" />
+    <ClInclude Include="..\..\..\include\Image.h" />
+    <ClInclude Include="..\..\..\include\Input.h" />
+    <ClInclude Include="..\..\..\include\Job.h" />
+    <ClInclude Include="..\..\..\include\JobManager.h" />
+    <ClInclude Include="..\..\..\include\Key.h" />
+    <ClInclude Include="..\..\..\include\Keyframe.h" />
+    <ClInclude Include="..\..\..\include\LeakReport.h" />
+    <ClInclude Include="..\..\..\include\LocalDefines.h" />
+    <ClInclude Include="..\..\..\include\Log.h" />
+    <ClInclude Include="..\..\..\include\Manager.h" />
+    <ClInclude Include="..\..\..\include\MathUtil.h" />
+    <ClInclude Include="..\..\..\include\Memory.h" />
+    <ClInclude Include="..\..\..\include\Movie.h" />
+    <ClInclude Include="..\..\..\include\Music.h" />
+    <ClInclude Include="..\..\..\include\Mutex.h" />
+    <ClInclude Include="..\..\..\include\Number.h" />
+    <ClInclude Include="..\..\..\include\Particle.h" />
+    <ClInclude Include="..\..\..\include\ParticleEmitter.h" />
+    <ClInclude Include="..\..\..\include\Point.h" />
+    <ClInclude Include="..\..\..\include\PrefabManager.h" />
+    <ClInclude Include="..\..\..\include\Presentation.h" />
+    <ClInclude Include="..\..\..\include\Profiler.h" />
+    <ClInclude Include="..\..\..\include\Rand.h" />
+    <ClInclude Include="..\..\..\include\Reader.h" />
+    <ClInclude Include="..\..\..\include\Rect.h" />
+    <ClInclude Include="..\..\..\include\Renderer.h" />
+    <ClInclude Include="..\..\..\include\RendererDevice.h" />
+    <ClInclude Include="..\..\..\include\RendererManager.h" />
+    <ClInclude Include="..\..\..\include\ResourceGroup.h" />
+    <ClInclude Include="..\..\..\include\ResourceLoader.h" />
+    <ClInclude Include="..\..\..\include\ResourceManager.h" />
+    <ClInclude Include="..\..\..\include\SaveSystem.h" />
+    <ClInclude Include="..\..\..\include\SceneManager.h" />
+    <ClInclude Include="..\..\..\include\SceneNode.h" />
+    <ClInclude Include="..\..\..\include\SceneObjectFactory.h" />
+    <ClInclude Include="..\..\..\include\Screen.h" />
+    <ClInclude Include="..\..\..\include\Seed.h" />
+    <ClInclude Include="..\..\..\include\SeedInit.h" />
+    <ClInclude Include="..\..\..\include\SeedRun.h" />
+    <ClInclude Include="..\..\..\include\Singleton.h" />
+    <ClInclude Include="..\..\..\include\Sound.h" />
+    <ClInclude Include="..\..\..\include\SoundSource.h" />
+    <ClInclude Include="..\..\..\include\SoundSystem.h" />
+    <ClInclude Include="..\..\..\include\Sprite.h" />
+    <ClInclude Include="..\..\..\include\StateMachine.h" />
+    <ClInclude Include="..\..\..\include\System.h" />
+    <ClInclude Include="..\..\..\include\Texture.h" />
+    <ClInclude Include="..\..\..\include\Thread.h" />
+    <ClInclude Include="..\..\..\include\ThreadManager.h" />
+    <ClInclude Include="..\..\..\include\Timeline.h" />
+    <ClInclude Include="..\..\..\include\Timer.h" />
+    <ClInclude Include="..\..\..\include\Updater.h" />
+    <ClInclude Include="..\..\..\include\Vertex.h" />
+    <ClInclude Include="..\..\..\include\ViewManager.h" />
+    <ClInclude Include="..\..\..\include\Viewport.h" />
+    <ClInclude Include="..\..\..\include\Writer.h" />
+    <ClInclude Include="..\..\..\include\interface\ICartridge.h">
+      <Filter>interface</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\interface\IDataObject.h">
+      <Filter>interface</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\interface\IEvent.h">
+      <Filter>interface</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\interface\IEventFileSystemListener.h">
+      <Filter>interface</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\interface\IEventInput.h">
+      <Filter>interface</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\interface\IEventInputJoystickListener.h">
+      <Filter>interface</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\interface\IEventInputKeyboardListener.h">
+      <Filter>interface</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\interface\IEventInputMotionListener.h">
+      <Filter>interface</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\interface\IEventInputPointerListener.h">
+      <Filter>interface</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\interface\IEventListener.h">
+      <Filter>interface</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\interface\IEventMovieListener.h">
+      <Filter>interface</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\interface\IEventResourceLoaderListener.h">
+      <Filter>interface</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\interface\IEventSystemListener.h">
+      <Filter>interface</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\interface\IGameApp.h">
+      <Filter>interface</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\interface\IHardwareBuffer.h">
+      <Filter>interface</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\interface\IInput.h">
+      <Filter>interface</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\interface\IInputJoystick.h">
+      <Filter>interface</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\interface\IInputKeyboard.h">
+      <Filter>interface</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\interface\IInputMotion.h">
+      <Filter>interface</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\interface\IInputPointer.h">
+      <Filter>interface</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\interface\IManager.h">
+      <Filter>interface</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\interface\IMusic.h">
+      <Filter>interface</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\interface\IMutex.h">
+      <Filter>interface</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\interface\IObject.h">
+      <Filter>interface</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\interface\IReader.h">
+      <Filter>interface</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\interface\IRenderable.h">
+      <Filter>interface</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\interface\IRendererDevice.h">
+      <Filter>interface</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\interface\IResource.h">
+      <Filter>interface</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\interface\ISceneObject.h">
+      <Filter>interface</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\interface\IScreen.h">
+      <Filter>interface</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\interface\ISound.h">
+      <Filter>interface</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\interface\ISoundSource.h">
+      <Filter>interface</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\interface\ISoundSystem.h">
+      <Filter>interface</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\interface\ISystem.h">
+      <Filter>interface</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\interface\ITexture.h">
+      <Filter>interface</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\interface\IThread.h">
+      <Filter>interface</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\interface\ITransformable.h">
+      <Filter>interface</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\interface\IUpdatable.h">
+      <Filter>interface</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\interface\IVideo.h">
+      <Filter>interface</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\interface\IWriter.h">
+      <Filter>interface</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\platform\sdl\sdlDefines.h">
+      <Filter>platform\sdl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\platform\sdl\sdlInput.h">
+      <Filter>platform\sdl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\platform\sdl\sdlMutex.h">
+      <Filter>platform\sdl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\platform\sdl\sdlScreen.h">
+      <Filter>platform\sdl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\platform\sdl\sdlSystem.h">
+      <Filter>platform\sdl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\platform\sdl\sdlTexture.h">
+      <Filter>platform\sdl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\platform\sdl\sdlThread.h">
+      <Filter>platform\sdl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\platform\sdl\sdlTimer.h">
+      <Filter>platform\sdl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\map\GameMap.h">
+      <Filter>map</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\map\IMapLayer.h">
+      <Filter>map</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\map\MapLayerMetadata.h">
+      <Filter>map</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\map\MapLayerMosaic.h">
+      <Filter>map</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\map\MapLayerTiled.h">
+      <Filter>map</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\map\MetadataObject.h">
+      <Filter>map</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\map\TileSet.h">
+      <Filter>map</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
